c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/negate_char_pointer.c
/* You can't negate pointers, including pointers to char */
int main(void) {
    char *x = "foo";
    return -x;
}